--- a/LegoDataSetAnalysis.ipynb
+++ b/LegoDataSetAnalysis.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lego DataSet Analysis from 1950 to 2017"
+    "# Lego DataSet Analysis from 1950 to 2017\n",
+    "\n",
+    "## Renna Rino group K"
    ]
   },
   {
